<resources>
    <string name="app_name">TaskApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Screens: Auth -->
    <string name="email">E-mail</string>
    <string name="type_your_email">Digite seu e-mail</string>
    <string name="password">Senha</string>
    <string name="type_your_password">Digite sua senha</string>
    <string name="login">login</string>
    <string name="create_account">Criar conta</string>
    <string name="recover_account">Recuperar conta</string>
    <string name="send">Enviar</string>
    <string name="recover_account_info">Informe o seu e-mail cadastrado para receber\n um link de alteração da senha</string>

    <!-- Screen: New Task -->
    <string name="description">Descrição</string>
    <string name="hint_new_task">Criar nova tela de login do app</string>
    <string name="status">Status</string>
    <string name="save">Salvar</string>
    <string name="new_task">Nova tarefa</string>

    <!-- Status Task -->
    <string name="status_task_todo">A fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feitas</string>

    <!-- Validations -->
    <string name="enter_email_login">Insira seu e-mail</string>
    <string name="enter_password_login">Insira sua senha</string>
    <string name="enter_email_valid">Insira um e-mail válido</string>
    <string name="enter_password_register">Insira uma senha</string>
    <string name="enter_description">Insira a descrição da tarefa</string>

    <!-- Errors Firebase Authentication -->
    <string name="invalid_credentials">Credenciais inválidas. Verifique seu email e senha e tente novamente"</string>
    <string name="invalid_email_register">Insira um e-mail válido</string>
    <string name="email_in_use">Este e-mail já está em uso</string>
    <string name="strong_password_register">Insira uma senha mais forte</string>

    <!-- Custom Bottom Sheet -->
    <string name="attention">Atenção</string>
    <string name="message">Mensagem</string>

    <string name="understood">Entendi</string>
    <string name="confirm">Confirmar</string>

    <string name="logout_account">Deseja sair da sua conta?</string>
    <string name="msg_logout">Aperte em confirmar para sair da sua conta</string>
    <string name="title_delete_task">Deseja remover esta tarefa?</string>
    <string name="msg_delete_task">Aperte em confirmar para remover a tarefa.</string>
    <string name="msg_logout_2"> </string>

    <!-- Btn -->
    <string name="remove">Remover</string>
    <string name="edit">Editar</string>
    <string name="details">Detalhes</string>

    <!-- Toast -->
    <string name="msg_no_internet">Sem conexão com internet</string>
    <string name="msg_recover_account">Um link foi enviado para o seu e-mail.</string>
    <string name="error_generic">Ocorreu um erro. Tente novamente mais tarde.</string>

    <string name="task_saved">Tarefa salva com sucesso</string>
    <string name="task_updated">Tarefa atualizada com sucesso</string>
    <string name="task_empty">Nenhuma tarefa cadastrada</string>
    <string name="task_loading">Aguarde, estamos carregando as informações</string>
    <string name="task_delete">Tarefa removida com sucesso</string>
    <string name="task_edit">Editar tarefa</string>

    <string name="task_status_change_todo">A tarefa mudou para o status: A fazer</string>
    <string name="task_status_change_doing">A tarefa mudou para o status: Fazendo</string>
    <string name="task_status_change_done">A tarefa mudou para o status: Feita</string>

    <!-- Erro -->
    <string name="task_saved_error">Erro ao salvar a tarefa</string>
    <string name="task_updated_error">Erro ao atualizar tarefa</string>
    <string name="task_delete_error">Erro ao remover tarefa</string>


</resources>