<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attention"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/primary_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?actionBarDivider" />

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:textColor="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/understood"
        android:background="@drawable/bg_btn"
        app:backgroundTint="@color/primary_color"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:textAllCaps="true" />

</LinearLayout>