<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="6dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/txt_description_task"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Criar layout da tela de login do app" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_remove_task"
                style="@style/Button2.TaskApp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:backgroundTint="@color/red"
                android:text="@string/remove"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_edit_task"
                app:layout_constraintEnd_toStartOf="@+id/btn_edit_task"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_edit_task" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit_task"
                style="@style/Button2.TaskApp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/primary_color"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_details_task"
                app:layout_constraintStart_toEndOf="@+id/btn_remove_task"
                app:layout_constraintTop_toBottomOf="@+id/txt_description_task"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_details_task"
                style="@style/Button2.TaskApp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:backgroundTint="@color/green"
                android:text="@string/details"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_edit_task"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_edit_task"
                app:layout_constraintTop_toTopOf="@+id/btn_edit_task" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>